# ffie

./: .gitignore  .mise.toml  Gemfile  Pipfile  Rakefile  Readme.md  benchmark.rb  jl.rb  mise.toml  pyproject.toml  pythonie.py  rubie.rb  tasks.py  ziggie.diff
cittie/: CMakeLists.txt  build.sh  library.c  library.h
cpptie/: CMakeLists.txt  build.sh  library.cpp  library.h
crystie/: LICENSE  README.md  build.sh  shard.yml
crystie/spec/: crystie_spec.cr  spec_helper.cr
crystie/src/: crystie.cr
dittie/: .gitignore  build.sh  dub.json  dub.selections.json
dittie/source/: lib.d
f/: Library.fs
genie/: .gitignore  build.sh  genie.gs
gotie/: build.sh  go.mod  go.sum  gotie.go
gvallie/: .gitignore  build.sh  gvallie.vala
haskie/: CHANGELOG.md  LICENSE  build.sh  haskie.cabal
haskie/csrc/: HaskieWrapper.c
haskie/src/: Haskie.hs
javie/: Javie.java  build.sh
julitie/: LICENSE  Makefile  Manifest.toml  Project.toml  README.md  build.jl  build.sh
julitie/src/: julia_init.c  julia_init.h  julitie.h  julitie.jl
julitie/test/: runtests.jl
llrubie/: llrubie.rb
lltie/: .gitignore  build.sh  lltie.ll
nimmie/: build.sh  nimmie.nimble
nimmie/src/: nimmie.nim
nimmie/tests/: test1.nim
oddie/: build.sh  oddie.odin
rustie/: Cargo.toml  build.sh
rustie/src/: lib.rs
sharpie/: Sharpie.cs  build.sh  sharpie.csproj
swiftie/: Package.swift  README.md  build.sh
swiftie/Sources/swiftie/: swiftie.swift
vallie/: .gitignore  build.sh  vallie.vala
ziggie/: build.sh  build.zig  build.zig.zon  gyro.zzz
ziggie/src/: main.zig  root.zig
(+1 files in other folders)
