[tool.poetry]
name = "ffie"
version = "0.1.0"
description = "FFI playground"
authors = ["uvlad7 <uvlad7@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
cffi = "^1.15.1"
colorist = "^1.6.0"
PyGObject = '==3.50.2'


[tool.poetry.group.dev.dependencies]
invoke = "^2.1.3"
poethepoet = "^0.20.0"
ipython = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
build.shell   = """
inv build
"""
